--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,21 @@
-# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency=false
-# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache=true
-# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
-org.gradle.caching=true
+pluginGroup = org.sayandev.sayanplugin
+pluginName = Sayan
+pluginRepositoryUrl = https://github.com/sayan-Development/sayanplugin
+pluginVersion = 1.2.0-SNAPSHOT
+
+pluginSinceBuild = 242
+pluginUntilBuild = 252.*
+
+platformType = IC
+platformVersion = 2025.1
+
+platformPlugins =
+platformBundledPlugins =
+
+gradleVersion = 8.13
+
+kotlin.stdlib.default.dependency = false
+
+org.gradle.configuration-cache = true
+
+org.gradle.caching = true
